force-app/main/default/objects/Job__c/fields/Eligible_Branch_c__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Branch_c__c</fullName>
    <label>Eligible_Branch__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>AI &amp; ML</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>MECH</fullName>
            </value>
            <value>
                <fullName>CIVIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>