force-app/main/default/objects/Job__c/fields/Placement_Officer_Email__c.field-meta.xml
<CustomField>
    <fullName>Placement_Officer_Email__c</fullName>
    <label>Placement Officer Email</label>
    <type>Email</type>
</CustomField>